--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "bootstrap": "^5.2.3",
+        "css-loader": "^6.7.3",
+        "jquery": "^3.6.4",
+        "laravel-mix": "^6.0.49",
+        "popper.js": "^1.16.1",
+        "postcss-loader": "^7.3.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.2.2",
+        "style-loader": "^3.3.2"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.7"
     }
 }
