--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.14",
+        "autoprefixer": "10.4.5",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "css-loader": "^6.7.3",
