--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "style-loader": "^3.3.2"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.7"
+        "@popperjs/core": "^2.11.7",
+        "bootstrap-icons": "^1.10.5"
     }
 }
