--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "css-loader": "^6.7.3",
+        "html5-qrcode": "^2.3.8",
         "jquery": "^3.6.4",
         "laravel-mix": "^6.0.49",
         "popper.js": "^1.16.1",
