--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ yarn-error.log
 /public/js
 /public/css
 /public/fonts
+/public/manage-events-385813-0cd928a738fb.json
+/public/manage-events-385813-eb3cbb198ffb.json
