--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "revolution/laravel-google-sheets": "^6.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
