--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ yarn-error.log
 /public/fonts
 /public/manage-events-385813-0cd928a738fb.json
 /public/manage-events-385813-eb3cbb198ffb.json
+/storage/credentials.json
