Events: Refactor Code Google Import

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/js/app.js": "/js/app.js",
     "/js/guest.js": "/js/guest.js",
     "/js/scan-qrcode.js": "/js/scan-qrcode.js",
+    "/js/google.js": "/js/google.js",
     "/css/styles.css": "/css/styles.css"
 }
