--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,7 @@
     "/js/guest.js": "/js/guest.js",
     "/js/scan-qrcode.js": "/js/scan-qrcode.js",
     "/js/google.js": "/js/google.js",
+    "/js/datatable.js": "/js/datatable.js",
+    "/css/datatable.css": "/css/datatable.css",
     "/css/styles.css": "/css/styles.css"
 }
