--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@popperjs/core": "^2.11.7",
-        "bootstrap-icons": "^1.10.5"
+        "bootstrap-icons": "^1.10.5",
+        "datatables.net-buttons-bs5": "^2.3.6",
+        "datatables.net-dt": "^1.13.4",
+        "datatables.net-responsive-bs5": "^2.4.1",
+        "highlight.js": "^11.8.0",
+        "i": "^0.3.7",
+        "npm": "^9.6.6"
     }
 }
