--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "revolution/laravel-google-sheets": "^6.2"
+        "revolution/laravel-google-sheets": "^6.2",
+        "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
