--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@popperjs/core": "^2.11.7",
+        "bootstrap-datepicker": "^1.10.0",
         "bootstrap-icons": "^1.10.5",
         "datatables.net-buttons-bs5": "^2.3.6",
         "datatables.net-dt": "^1.13.4",
