--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,7 @@
     "/js/google.js": "/js/google.js",
     "/js/datatable.js": "/js/datatable.js",
     "/js/form-plugin.js": "/js/form-plugin.js",
+    "/js/event.js": "/js/event.js",
     "/css/datatable.css": "/css/datatable.css",
     "/css/form-plugin.css": "/css/form-plugin.css",
     "/css/styles.css": "/css/styles.css"
