--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,6 +7,7 @@
     "/js/datatable.js": "/js/datatable.js",
     "/js/form-plugin.js": "/js/form-plugin.js",
     "/js/event.js": "/js/event.js",
+    "/js/profile.js": "/js/profile.js",
     "/css/datatable.css": "/css/datatable.css",
     "/css/form-plugin.css": "/css/form-plugin.css",
     "/css/styles.css": "/css/styles.css"
