--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "datatables.net-responsive-bs5": "^2.4.1",
         "highlight.js": "^11.8.0",
         "i": "^0.3.7",
-        "npm": "^9.6.6"
+        "npm": "^9.6.6",
+        "summernote": "^0.8.20"
     }
 }
