--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@popperjs/core": "^2.11.7",
+        "@yaireo/tagify": "^4.17.8",
         "bootstrap-datepicker": "^1.10.0",
         "bootstrap-icons": "^1.10.5",
         "datatables.net-buttons-bs5": "^2.3.6",
@@ -34,7 +35,10 @@
         "datatables.net-responsive-bs5": "^2.4.1",
         "highlight.js": "^11.8.0",
         "i": "^0.3.7",
+        "jquery-migrate": "^3.4.1",
+        "jqueryui": "^1.11.1",
         "npm": "^9.6.6",
-        "summernote": "^0.8.20"
+        "summernote": "^0.8.20",
+        "tag-it": "^2.0.0"
     }
 }
