--- a/package.json
+++ b/package.json
@@ -35,10 +35,7 @@
         "datatables.net-responsive-bs5": "^2.4.1",
         "highlight.js": "^11.8.0",
         "i": "^0.3.7",
-        "jquery-migrate": "^3.4.1",
-        "jqueryui": "^1.11.1",
         "npm": "^9.6.6",
-        "summernote": "^0.8.20",
-        "tag-it": "^2.0.0"
+        "summernote": "^0.8.20"
     }
 }
