--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -9,6 +9,7 @@
     "/js/form-plugin.js": "/js/form-plugin.js",
     "/js/event.js": "/js/event.js",
     "/js/profile.js": "/js/profile.js",
+    "/js/qrcode.js": "/js/qrcode.js",
     "/css/datatable.css": "/css/datatable.css",
     "/css/form-plugin.css": "/css/form-plugin.css",
     "/css/styles.css": "/css/styles.css"
